/*
 * =====================================================================================
 *
 *       Filename:  test_user_employment_info.h
 *
 *    Description:  send user employment info to sync user system
 *
 *        Version:  1.0
 *        Created:  03/31/2012 09:36:41 PM
 *       Revision:  none
 *       Compiler:  gcc
 *
 *         Author:  YueYang (feinno), yueyang@feinno.com
 *        Company:  FCT
 *
 * =====================================================================================
 */

#ifndef _TEST_USER_EMPLOYMENT_INFO_H_
#define _TEST_USER_EMPLOYMENT_INFO_H_

#include <stdlib.h>
#include <assert.h>
#include <stdio.h>
#include <string.h>
#include <ctype.h>
#include <stdarg.h>

#include "../utils.h"

#include "../../proto/community.pb-c.h"

#endif

